--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 # configster ChangeLog
 
+* v0.1.1 released (2020-08-05)
+
 * When an invalid option is encountered, 'InvalidOption_on_Linexx' is
 assigned to the option (instead of 'InvalidOption').
 
 * Added get_ver() function. Returns a String containing the library version.
+
+* Added more docs to the README and the API.
+
+* Code cleanup
